fixed clouds posi on mobile

--- a/src/app/slides/learnings-page/learnings-page.component.css
+++ b/src/app/slides/learnings-page/learnings-page.component.css
@@ -264,9 +264,11 @@
     left: 8%;
   }
   .clouds2 {
+    top: 32%;
     left: 5%;
   }
   .clouds3 {
+    top: 51%;
     left: 4%;
   }
   .clouds4 {
@@ -274,19 +276,22 @@
     left: 54%;
   }
   .clouds5 {
+    top: 45%;
     left: 50%;
   }
   .clouds6 {
     left: 50%;
   }
   .clouds7 {
+    top: 55%;
     left: 55%;
   }
   .clouds8 {
-    left: 15%;
+    top: 60%;
+    left: 20%;
   }
     .clouds9 {
-    top: 42%;
+    top: 41%;
     left: 15%;
   }
 }
